assets/css/styles.css
/* ... */
a{
    color: var(--primary-color2);
    text-decoration: none;

}
a:hover{
    color: var(--primary-color);
}
section
{
    outline: solid var(--primary-color2) 1px;
}
section.NoOutline{
    outline: none;
}
section.Outline{
    outline: solid var(--primary-color2) 1px;
}
section.NoBorder{
    border-radius: 0;
}
.background{
    background-color: var(--background-color);
}
img{
    max-width: 100%;
    max-height: 100%;
    height: 100%;
    min-height: 100%;
    min-width: 100%;
    width: 100%;
    object-fit: cover;
    
}
.align-center{
    text-align: center;
}
.align-left{
    text-align: left;
}

.home-link{
    display: block;
width: 40px;
height: 40px;
}


/*=========================================================
HEADER
=========================================================*/

header
{
display: flex;
    align-items: center;
    background-size: contain;
        overflow: visible;
    background-repeat: no-repeat;
    background-position: center;
    height: 60px;
    width: 100%;
 margin: 0 0 20px 0;
    box-shadow: 0 1px 0 rgb(212, 139, 99);
    display: flex;

vertical-align: middle;
}
/*=========================================================
HEADER BUTTONS
=========================================================*/

header section{
    font-family: header-font;

    display: flex;
    outline: none;
    height: 40px;
    font-size: 30px;
    align-items: center;
}
@media(max-width: 800px) {
    header section.HeaderButton{

        margin: 0;
        width: 0;
     font-size: 0px;
        }
}
@media(min-width: 800px) {
    header section.HeaderButton{
        outline: none;

    margin: 30px;
    width: 170px;
    justify-content: center;
    overflow: hidden;
    font-size: 25px;
    }
}


header section:first-child:not(.MenuMoon){
    margin: 0 0 0 50px;
}

header section:last-child:not(.MenuMoon){
    margin: 0 50px 0 0;
}
.transparent{
    background-color: white;
}
/*=========================================================
HOME BUTTON MOON
=========================================================*/

header section.MenuWrapper{
    display: flex;
    justify-content: center;
    min-width: 160px;
    width: 40px;
overflow: visible;
    margin: auto;
    cursor: pointer;
    pointer-events: all;
}

.MenuMoon {
    overflow: visible;
    width: 40px;
    outline: none;
    position: absolute;
    transition: 0.2s all;
    transition-delay: 30ms;
    pointer-events: none;
    z-index: -1;
  }
  .MenuMoon.Moon1{
    z-index: 1;
  }
.MenuWrapper:hover .Moon2,.MenuWrapper:hover .Moon3{
    opacity: 70%;
}
.MenuWrapper:hover .Moon4,.MenuWrapper:hover .Moon5{
    opacity: 20%;
}
.MenuWrapper:hover .Moon2{
    transform: translateX(30px);
}
.MenuWrapper:hover .Moon3{
    transform: translateX(-30px);
}
.MenuWrapper:hover .Moon4{
    transform: translateX(55px);
}
.MenuWrapper:hover .Moon5{
    transform: translateX(-55px);
}

/*=========================================================
GLOBAL GRID
=========================================================*/
.GridWrapper{

    flex-flow: column;
    gap: 10px;
    overflow: visible;
    outline: 1px;
}
.GlobalGrid{
    row-gap: 0px;
    align-self: center;
    outline: none;
    place-items: center;
    display: grid;
    place-self: center;
    grid-template-columns: repeat(4, 220px);
    grid-template-rows: repeat(8, auto);
    width: 100%;
}

/*=========================================================
DISPLAY GRIDS
=========================================================*/
/*-----------------------
CrossBar
-----------------------*/
.main-title{
    font-family: header-font;

    grid-column: span 4;
    outline: none;
    font-size: 100px;
}
.second-title{
    font-family: header-font;

    grid-column: span 4;
    outline: none;
    text-align: left;
    font-size: 75px;
}
.CrossBar{
    display: grid;
row-gap: 40px;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 400px 1fr;

    width: 100%;
    height: 100%;
    grid-column: span 4;
}
.section-divider{
    grid-column: span 4;
    outline: none;
    width: 100%;
    height: 1px;
    grid-column: span 4;
box-shadow: 0px -2px 0px rgb(212, 139, 99);
}
.section-divider.no-line{
    height: 100px;

    box-shadow: none;
}
.section-divider.no-line.small{
    height: 50px;

    box-shadow: none;
}
.section-divider.no-line.micro{
    height: 20px;
    box-shadow: none;
}
.section-divider.no-line.large{
    height: 150px;
    box-shadow: none;
}
/*-----------------------*/

.hero{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr;
    grid-column: span 4;
    width: 100%;
    height: 440;
    outline: none;
    align-items: center;
    justify-content: center;
}


.hero-card{
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    overflow: hidden;
    border-radius: 130px 130px 0 0;
}

 .hero-card section{
    grid-row: 1;
    grid-column: 1;
}

.hero-card .hero-card-cover{
    transition: 600ms;
    z-index: 1;
    
}
@media (pointer: none) { 

    .hero-card, .hero .hero-card-cover{
        display: none;
    }
} 
.hero-card, .hero .hero-card-cover{
   margin: 0 auto 0 auto;
   width: 260px;
    height: 440px;
}


.hero-card:hover .hero-card-cover{
   transform:translate(0, -100%);
}



.hover-card{
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    overflow: hidden;
}

 .hover-card section{
    grid-row: 1;
    grid-column: 1;
}
@media (pointer: none) { 

    .hover-card .hover-card-cover{
        display: none;
    }
} 




    .hover-card .hover-card-cover{
        transition: 500ms;
        z-index: 1;
        border-radius:  0px;
    }



 .hover-card{
    margin: 0 auto 0 auto;

}
.hover-card:hover .hover-card-cover{
   transform:translate(0, -101%);
}























.Seperator{
    display: inline-grid;
    background-color: var(--primary-color);
height: 600px;
width: 100%;
grid-column: span 4;
}
/* ... */

